--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "teste.com",
-  "displayName": "Garçonete ",
-  "version": "1.0.0",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Apache Cordova Team",
-  "license": "Apache-2.0",
-  "dependencies": {
-    "cordova-android": "^7.0.0",
-    "cordova-browser": "^5.0.3",
-    "cordova-plugin-whitelist": "^1.3.3"
-  },
+  "name": "org.sergiolopes.garconapp",
+  "version": "0.0.1",
+  "displayName": "Garçonete Só de Cenoura",
   "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {}
-    },
     "platforms": [
-      "browser",
-      "android"
-    ]
+      "android",
+      "browser"
+    ],
+    "plugins": {
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-statusbar": {}
+    }
+  },
+  "dependencies": {
+    "cordova-android": "~7.0.0",
+    "cordova-browser": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "phonegap-plugin-barcodescanner": "^7.0.2"
   }
 }
